# model_encryption

./: CMakeLists.txt  README.md
include/: CryptoUtils.h
src/: CryptoUtils.cpp  main.cpp
